    - Added new achievements: Legacy code, 

  Changes:
    - Changed vanilla rocket fuel into Solid rocket fuel.
    - Changed rocket fuel's acceleration modifier to 250%.
    - Changed rocket fuel's top speed modifier to 500%.
    - Changed rocket fuels fuel value to 25MJ.
    - Changed ruby/sapphire laser heads into modules for the electronic laser etcher.
    - Removed Jesus Marie, they're minerals! achievement

---------------------------------------------------------------------------------------------------
Version: 0.7.000
Date: 2025-12-07
  The 2 months? you are insane Update:

  Additions:
    - Added Osmium.
    - Added Iridium.
    - Added Tantalum.
    - Added Niobium.
    - Added Selenium.
    - Added Technectium.
    - Added Dubnium.
    - Added Rhenium.
    - Added Rhodium.
    - Added Ruthenium.
    - Added Inconel 625! its current use is as a new type of heating coil, which is the only coil that can add productivity.
    - Finally added nitric acid! unlocked in A-ATM science so i can actually use it for anything, it will replace some recipes use of nitrogen/fluids.
    - Also added aqua regia, which is why nitric acid even got added! it was now or when i got to 0.8/0.9, so
    - Finally gave science its own tab! because god knows im not slowing down on unique science items and recipes.
    - Added experimental research data (technectium science), which is a special science pack that unlocks bonuses or things related to science.
    - Finally added the first PM-endorsed infinite technologies, which is science pack recipe productivity!
    - Added new recipes for Mulitmetal items.
    - Added selenium batteries, as an end-game battery unlock. It currently only has a charged variant + new battery equipment, but will get more soon.
    - Added the obligatory assembling machine 4! it has a crafting speed of 1.75, with 6 module slots and the same amount of pipes.