@@ -497,6 +497,11 @@ pm-ammonium-ruthenium-chloride=Ammonium ruthenium chloride
 pm-ruthenium-ore=Ruthenium ore
 pm-ruthenium-plate=Ruthenium plate
 rocket-fuel=Solid rocket fuel
+pm-ammonium-nitrate=Ammonium nitrate
+pm-ammonium-dinitramide-ampule=Ammonium dinitramide ampule
+pm-hexamethyleneteramine=Hexamethyleneteramine (HMTA)
+pm-HMX=HMX
+pm-heat-shielding=Heat shielding
 
 automation-science-pack=Transition metal pack
 logistic-science-pack=Advanced transition metal pack
